--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Google Map</title>
+    <script src="./data.json" type="text/javascript"></script>
   </head>
 
   <body>
