--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="utf-8" />
     <title>Google Map</title>
     <script src="./data.json" type="text/javascript"></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <div id="map" style="width: 100%; height: 95vh"></div>
+    <a href="#">
+      <p onclick="main_link()">부천시 공연지도 메인화면 바로가기</p>
+    </a>
+    <div id="map" style="width: 100%; height: 90vh"></div>
     <script
       async
       defer
