--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8" />
     <title>Google Map</title>
     <script src="./data.json" type="text/javascript"></script>
+    <script src="./script.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <a href="#">
-      <p onclick="main_link()">부천시 공연지도 메인화면 바로가기</p>
+      <p id="text" onclick="main_link()">부천시 공연지도 메인화면 바로가기</p>
     </a>
     <div id="map" style="width: 100%; height: 90vh"></div>
     <script
