--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a href="#">
       <p id="text" onclick="main_link()">부천시 공연지도 메인화면 바로가기</p>
     </a>
-    <div id="map" style="width: 100%; height: 90vh"></div>
+    <div id="map"></div>
     <script
       async
       defer
